# faktor

./: Anchor.toml  README.md  package.json
app/: .eslintrc  .prettierrc  craco.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.paths.json
app/public/: index.html
app/src/: App.tsx  idl.json  index.css  routes.tsx  utils.ts
app/src/api/: checkWalletAddressExists.ts  createCashflow.ts  createPayment.ts  idl.json  index.ts  payInvoice.ts  program.ts
app/src/components/: ActionButtons.tsx  CashflowTable.tsx  ConnectWalletPrompt.tsx  ErrorMessage.tsx  Header.tsx  Icon.tsx  Input.tsx  InputField.tsx  MintAmountInput.tsx  MintInputField.tsx  MintSelect.tsx  Modal.tsx  PaymentsTable.tsx  Select.tsx  SolanaLogo.tsx  Toggle.tsx  TransferRateInput.tsx  WalletButton.tsx  Web3Provider.tsx  index.ts  types.ts
app/src/components/CreateCashflow/: ConfirmationStep.tsx  CreateCashflowModal.tsx  EditingStep.tsx  InputStep.tsx  index.ts
app/src/components/CreatePayment/: ConfirmationStep.tsx  CreatePaymentModal.tsx  InputStep.tsx  TransferRateInput.tsx  index.ts
app/src/components/Header/: index.tsx  (+2 more)
app/src/hooks/: useOnClickOutside.ts
app/src/utils/: ata.ts  index.ts  mint.ts  publicKey.ts
app/src/views/: HomeView.tsx
programs/cashflow/: Cargo.toml
programs/cashflow/src/: lib.rs
programs/faktor/: Cargo.toml
programs/faktor/src/: lib.rs
scripts/: constants.ts  ensure-all-tests-pass.ts  helpers.ts  setup-dev.ts  start-test-validator.ts  sync-idls.ts  sync-program-ids.ts  tsconfig.scripts.json
tests/: cashflow.js  faktor.js
(+19 files in other folders)
