[package]
name = "faktor"
version = "0.1.0"
description = "Tokenized cash flows"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "faktor"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.16.2"
anchor-spl = "0.16.2"
solana-program = "1.6.9"
